--- a/Rapidlaunch/Rapidlaunch.csproj
+++ b/Rapidlaunch/Rapidlaunch.csproj
@@ -15,6 +15,7 @@
 
 
   <ItemGroup>
+    <Folder Include="Views\NewFolder\" />
     <Folder Include="wwwroot\Images\" />
     <Folder Include="wwwroot\Assets\" />
   </ItemGroup>
